# pjsekai-soundgen-rust

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  server.rs  sonolus.rs  sound.rs  synthesis.rs  utils.rs
src/: console.rs  level.rs  main.rs  server.rs  sonolus.rs  sound.rs  synthesis.rs  utils.rs
