[package]
name = "pjsekai-soundgen-rust"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
enable-ansi-support = "0.1.2"
flate2 = "1.0.24"
getopts = "0.2.21"
indicatif = "0.16.2"
once_cell = "1.12.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
