[package]
name = "pjsekai-soundgen-rust"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
console = "0.15.7"
dialoguer = "0.10.1"
dirs = "5.0.1"
enable-ansi-support = "0.1.2"
flate2 = "1.0.24"
getopts = "0.2.21"
indicatif = "0.16.2"
itertools = "0.11.0"
once_cell = "1.13.0"
process_path = "0.1.4"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6.6"
