[package]
name = "pjsekai-soundgen-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.71"
dirs = "5.0.1"
flate2 = "1.0.24"
itertools = "0.11.0"
once_cell = "1.13.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6.6"
